# mastermind-hs

./: .bazel-hls  .gitignore  .hie-bios  BUILD.bazel  WORKSPACE  haskell-language-server-stack-snapshot.yaml  haskell-language-server_snapshot.json  hie.yaml  mastermind-hs.cabal  retrie.patch  stackage_snapshot.json
app/: Main.hs
src/: CheckGuess.hs  Parser.hs  Serialize.hs  Types.hs
src/Network/: GuessThread.hs  ListenThread.hs
test/: CheckGuessSpec.hs  ParserSpec.hs
